# bitcoin_Predictor

./: README.md
docker-compose/: Makefile  backfill_pipeline.yml  feature_pipeline.yml
services/features_dashboard/: pyproject.toml
services/features_dashboard/src/: backend.py  config.py  frontend.py
services/price_predictor/: hopsworks_credentials.env  makefile  pyproject.toml
services/price_predictor/src/: baseline_model.py  data_preprocessing.py  feature_engineering.py  model_factory.py  ohlc_data_reader.py  ohlc_data_writer.py  predictor.py  training.py  utils.py
services/topic_to_feature_store/: Dockerfile  Makefile  historical.prod.env  pyproject.toml
services/topic_to_feature_store/src/: hopsworks_api.py  main.py
services/trade_producer/: Makefile  historical.dev.env  live.dev.env  pyproject.toml
services/trade_producer/src/: config.py  main.py
services/trade_producer/src/trade_data_source/: base.py  kraken_rest_api.py  kraken_websocket_api.py
services/trade_to_ohlc/: pyproject.toml
services/trade_to_ohlc/src/: config.py  main.py
