[tool.poetry]
name = "features-dashboard"
version = "0.1.0"
description = ""
authors = ["Tacoman99 <jorgepadres789@gmail.com>"]
readme = "README.md"
packages = [{include = "features_dashboard", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
