[tool.poetry]
name = "price-predictor"
version = "0.1.0"
description = ""
authors = ["Tacoman99 <jorgepadres789@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.13"
loguru = "^0.7.2"
scikit-learn = "^1.5.0"
ta-lib = "^0.4.31"
comet-ml = "^3.43.2"
matplotlib = "^3.9.0"
flask = "^3.0.3"
gunicorn = "^22.0.0"
xgboost = "2.0.0"
optuna = "^3.6.1"
pandas = "<2.2.0"
hopsworks = "^3.7.0"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

